MFH: Fixed bug #24897 (inconsistent behavior of shuffle() & array_multisort())